fix top height too long

--- a/css/theme.css
+++ b/css/theme.css
@@ -188,7 +188,6 @@ ul.katakana-iroha {list-style-type: katakana-iroha}
 /**
  * back to top
  */
-body{height:3000px;}
 #rocket-to-top div {
     left:0;
     margin:0;
